Bug 1262808: Fix use of |PrincipleHandle| in |MediaEngineGonkVideoSource| r=rjesup